# cardano-trace-ltl

./: CHANGELOG.md  LICENSE  LTL_language_overview.md  cardano-trace-ltl.cabal
app/: App.hs  Main.hs  Parser.hs  TraceVerifier.hs
app/TraceVerifier/: TraceMessage.hs
demo/: Demo.hs  Verify.hs  example-formulas.yaml  extract-fail-1.txt  extract-ok-1.txt  extract-ok-2.txt  formulas.txt  formulas.yaml
docs/: linear-temporal-logic.txt
idris/: README.md  cardano-trace-ltl.ipkg
idris/demo/: Demo.idr
idris/src/Cardano/LTL/: Check.idr  Occurs.idr  Pretty.idr  Satisfy.idr  Subst.idr  Transform.idr
idris/src/Cardano/LTL/Lang/: Formula.idr
idris/src/Cardano/LTL/Lang/Internal/: Fragment.idr  Fragment0.idr  Fragment1.idr  Fragment2.idr  GuardedFormula.idr  HomogeneousFormula.idr
idris/src/Cardano/Logging/Types/: TraceMessage.idr
idris/src/Cardano/Trace/: Feed.idr
idris/test/: Unit.idr
sample/: cfg.json  extract-fail-2.txt  extract-fail-3.txt  extract-ok-4.txt  formulas-dev.yaml  formulas.yaml  log-small.txt
src/Cardano/Data/: Strict.hs
src/Cardano/LTL/: Check.hs  Lang.hs  Occurs.hs  Prec.hs  Pretty.hs  Progress.hs  Rewrite.hs  Satisfy.hs  Subst.hs  Transform.hs
src/Cardano/LTL/Lang/: Formula.hs  Fragment.hs  GuardedFormula.hs  HomogeneousFormula.hs  Parser.hs  Prec.hs
src/Cardano/LTL/Lang/Formula/: Parser.hs  Yaml.hs
src/Cardano/LTL/Lang/Fragment/: Fragment0.hs  Fragment1.hs  Fragment2.hs
src/Cardano/LTL/Lang/Internal/: Fragment.hs  Fragment0.hs  Fragment1.hs  Fragment2.hs  GuardedFormula.hs  HomogeneousFormula.hs
src/Cardano/Trace/: Feed.hs  Ingest.hs
test/: Unit.hs
