cabal-version:      3.0
name:               cardano-trace-ltl
description:        Cardano declarative conformance testing.
version:            0.1.0.0
license-file:       LICENSE
author:             Jutaro & Russoul
maintainer:         xxx@iohk.io

build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options:

library
    import:           warnings
    exposed-modules:
                    , Cardano.Data.Strict

                    , Cardano.LTL.Check
                    , Cardano.LTL.Lang.Formula
                    , Cardano.LTL.Lang.Internal.Fragment
                    , Cardano.LTL.Lang.Internal.Fragment0
                    , Cardano.LTL.Lang.Internal.Fragment1
                    , Cardano.LTL.Lang.Internal.Fragment2
                    , Cardano.LTL.Lang.Internal.GuardedFormula
                    , Cardano.LTL.Lang.Internal.HomogeneousFormula
                    , Cardano.LTL.Occurs
                    , Cardano.LTL.Pretty
                    , Cardano.LTL.Satisfy
                    , Cardano.LTL.Subst
                    , Cardano.LTL.Transform

                    , Cardano.Trace.Feed

    other-modules:
    other-extensions:

    build-depends:    base
                    , containers
                    , text
                    , trace-dispatcher ^>= 2.11
                    , serialise
                    , bytestring
                    , time
                    , aeson

    hs-source-dirs:   src

    default-language: GHC2021
    default-extensions: Strict

executable cardano-trace-ltl-demo
    import:           warnings
    main-is:          Demo.hs

    other-modules:
    other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base
      , text
      , containers
      , cardano-trace-ltl
      , trace-dispatcher ^>= 2.11
      , aeson


    -- Directories containing source files.
    hs-source-dirs:   demo

    -- Base language which the package is written in.
    default-language: GHC2021

    default-extensions: Strict

test-suite cardano-trace-ltl-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Unit.hs
  build-depends:
      base
    , cardano-trace-ltl
    , containers
    , tasty
    , tasty-hunit
    , text
