cabal-version:      3.0
name:               cardano-trace-ltl
description:        Cardano declarative conformance testing.
version:            0.1.0.0
license-file:       LICENSE
author:             Jutaro & Russoul
maintainer:         xxx@iohk.io

build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options:      -Wall

library
    import:           warnings
    exposed-modules:
                    , Cardano.Data.Strict

                    , Cardano.LTL.Check
                    , Cardano.LTL.Lang.Formula
                    , Cardano.LTL.Lang.Prec
                    , Cardano.LTL.Lang.Internal.Fragment
                    , Cardano.LTL.Lang.Internal.Fragment0
                    , Cardano.LTL.Lang.Internal.Fragment1
                    , Cardano.LTL.Lang.Internal.Fragment2
                    , Cardano.LTL.Lang.Internal.GuardedFormula
                    , Cardano.LTL.Lang.Internal.HomogeneousFormula
                    , Cardano.LTL.Occurs
                    , Cardano.LTL.Pretty
                    , Cardano.LTL.Progress
                    , Cardano.LTL.Rewrite
                    , Cardano.LTL.Satisfy
                    , Cardano.LTL.Subst

                    , Cardano.Trace.Feed
                    , Cardano.Trace.Ingest

    other-modules:
    other-extensions:

    build-depends:    base
                    , containers
                    , text
                    , trace-dispatcher ^>= 2.11
                    , serialise
                    , bytestring
                    , time
                    , stm
                    , aeson
                    , streaming

    hs-source-dirs:   src

    ghc-options:      -O2

    default-language: GHC2021
    default-extensions: Strict

executable cardano-trace-ltl-verify
    import:           warnings
    main-is:          Verify.hs

    other-modules:
    other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base
      , text
      , containers
      , cardano-trace-ltl
      , trace-dispatcher ^>= 2.11
      , aeson
      , streaming


    -- Directories containing source files.
    hs-source-dirs:   demo

    -- Base language which the package is written in.
    default-language: GHC2021

    default-extensions: Strict

executable cardano-trace-ltl-demo
    import:           warnings
    main-is:          Demo.hs

    ghc-options:      -O2
                      -threaded
                      -rtsopts
                      -- limit to 2 cores for now
                      "-with-rtsopts=-N2"

    other-modules:
    other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base
      , text
      , containers
      , cardano-trace-ltl
      , trace-dispatcher ^>= 2.11
      , aeson
      , streaming


    -- Directories containing source files.
    hs-source-dirs:   demo

    -- Base language which the package is written in.
    default-language: GHC2021

    default-extensions: Strict

test-suite cardano-trace-ltl-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Unit.hs
  build-depends:
      base
    , cardano-trace-ltl
    , containers
    , tasty
    , tasty-hunit
    , text
